--- a/main.html
+++ b/main.html
@@ -9,7 +9,20 @@
 <body>	
 	<script>
 		function secondHighest(arr) {
-			//Write your code here
+			//Write your code here;
+			if(arr.length === 0 || arr.length === 1){
+				return "-Infinity"
+			}
+
+			let num = Math.max(...arr);
+
+			let eleArr = arr.filter((el) => el < num );
+
+			if(eleArr.length === 0){
+				return "-Infinity"
+			}
+
+			return eleArr[0];
 			
 		}
 
