--- a/main.html
+++ b/main.html
@@ -22,17 +22,18 @@
 				return "-Infinity"
 			}
 
-			return eleArr[0];
+			eleArr = eleArr.sort((a,b) => a-b)
+			return eleArr[eleArr.length - 1];
 			
 		}
 
 		function Main() {
-			var n = prompt("Enter the number of elements");
+			// var n = prompt("Enter the number of elements");
 			var arr = [];
 			for (var i = 0; i < n; i++) {
-				arr[i] = prompt("Enter element " + (i+1));
+				// arr[i] = prompt("Enter element " + (i+1));
 			}
-			alert(secondHighest(arr));
+			// alert(secondHighest(arr));
 		}
 		Main();
 	</script>
